fix registrations login template

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,19 +4,19 @@
   .field
     = f.label :first_name
     %br/
-    = f.email_field :first_name, autofocus: true, autocomplete: "first_name"
+    = f.text_field :first_name, autofocus: true, autocomplete: "first_name"
   .field
     = f.label :last_name
     %br/
-    = f.email_field :last_name, autofocus: true, autocomplete: "last_name"
+    = f.text_field :last_name, autofocus: true, autocomplete: "last_name"
   .field
     = f.label :role
     %br/
-    = f.email_field :role, autofocus: true, autocomplete: "role"
+    = f.text_field :role, autofocus: true, autocomplete: "role"
   .field
     = f.label :user_identifier
     %br/
-    = f.email_field :user_identifier, autofocus: true, autocomplete: "user_identifier"
+    = f.text_field :user_identifier, autofocus: true, autocomplete: "user_identifier"
   .field
     = f.label :email
     %br/
