--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -18,7 +18,7 @@
     %br/
     = f.text_field :user_identifier, autofocus: true, autocomplete: "user_identifier"
   .field
-    = f.label :user_identifier
+    = f.label :organization_id
     %br/
     = f.collection_select :organization_id, Organization.all, :id, :name, {autofocus: true, autocomplete: "organization"}
   .field
