--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,6 +3,26 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .field
+    = f.label :first_name
+    %br/
+    = f.text_field :first_name, autofocus: true, autocomplete: "first_name"
+  .field
+    = f.label :last_name
+    %br/
+    = f.text_field :last_name, autofocus: true, autocomplete: "last_name"
+  .field
+    = f.label :role
+    %br/
+    = f.text_field :role, autofocus: true, autocomplete: "role"
+  .field
+    = f.label :user_identifier
+    %br/
+    = f.text_field :user_identifier, autofocus: true, autocomplete: "user_identifier"
+  .field
+    = f.label :organization_id
+    %br/
+    = f.collection_select :organization_id, Organization.all, :id, :name, {autofocus: true, autocomplete: "organization"}
+  .field
     = f.label :email
     %br/
     = f.email_field :email, autofocus: true, autocomplete: "email"
